# TidballLab-SNP-Cas13d-Selector

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/instructions/: copilot.instructions.md  objectives.instructions.md
