[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tidball_snp_selector"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jim Delproposto" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["tidball_snp_selector"]
include = ["pyproject.toml", "tidball_snp_selector/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tidball_snp_selector"]
force-sort-within-sections = true

